--- a/src/index.styl
+++ b/src/index.styl
@@ -31,6 +31,21 @@
   width 12px
   height 12px
 }
+// fix https://github.com/terwer/siyuan-plugin-importer/issues/17
+html[data-light-theme="Savor"]
+  .importer-topbar-icon{
+    width: 16px;
+    height: 15px;
+    margin-top: -4px;
+    margin-left: -2px;
+  }
+html[data-dark-theme="Savor"]
+  .importer-topbar-icon{
+    width: 16px;
+    height: 15px;
+    margin-top: -4px;
+    margin-left: -2px;
+  }
 
 .importer-menu-icon{
   width 12px
