refactor: remove unused components and update styles
- Remove ImportForm.svelte and ImportSetting.svelte components
- Update global styles for import form and settings
- Add Vue dependency and remove Svelte

--- a/src/index.styl
+++ b/src/index.styl
@@ -31,6 +31,17 @@
   width 12px
   height 12px
 }
+
+#siyuan-import-form
+  .config__tab-container .b3-label:not(.b3-label--inner)
+    box-shadow unset
+    height unset
+
+#siyuan-importing-setting
+  .config__tab-container .b3-label:not(.b3-label--inner)
+    box-shadow unset
+    height unset
+
 // fix https://github.com/terwer/siyuan-plugin-importer/issues/17
 html[data-light-theme="Savor"]
   .importer-topbar-icon{
