fix(importer): optimize styles and improve import settings
- Add scoped attribute to styles in ImportForm and ImportSetting components
- Organize styles in a more structured and modular way
- Adjust styles for better visual consistency
- Update import setting styles for improved user experience- Make minor adjustments to context menu and other related styles

--- a/src/index.styl
+++ b/src/index.styl
@@ -66,3 +66,7 @@ html[data-dark-theme="Savor"]
   margin-right 10px
   margin-top 3px
 }
+
+div[data-name="importerContextMenu"]
+  .b3-menu__items
+    overflow hidden
